# bc_sheet_processor_v2

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  design-system-bc.html  docker-bkp.txt  docker-compose.yaml  entrypoint.sh  logs.sh  main.py  pyproject.toml  requirements.txt  service-down.sh  service-up.sh  start.sh
refatoracao-by-ia/: botconversa-design-system.md
refatoracao-by-ia/templates/: design-tokens.css  index.html
templates/: index.html
